source/_docs/patterns/02-molecules/donut-chart/donut-chart.scss
/*------------------------------------------------------------------------------
Molecule: Charts - Donut Chart
--------------------------------------------------------------------------------
------------------------------------------------------------------------------*/
@use "sass:list";
@use "../../00-utilities/utilities" as *;
wwu-donut-chart {
  --radius: 50cqw;
  @media(min-width: $small) {
    --radius: calc(50cqw / 2);
  }
  figure {
    container-type: inline-size;

    position: relative;
    display: grid;
    grid-template-areas: "chart chart"
    "legend legend";
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    place-items: center;
    margin-bottom: var(--space--lg);
    padding: 0;
    @media(min-width: $small) {
      grid-template-areas: "legend chart"
      "legend chart"
      "legend chart"
      "legend chart"
      "legend chart"
      "legend chart"
      "legend chart"
      "legend chart";
      grid-template-columns: auto auto;
      grid-template-rows: repeat(8, 1fr);
    }
  }
  figcaption {
    z-index: 1;
    display: grid;
    grid-area: chart;
    place-content: center;
    aspect-ratio: 1;
    width: var(--radius);
    margin: 0;
    padding: 0;
    content: "";
    text-align: center;
    border-radius: 50%;
    background: var(--page-background);
  }
  wwu-chart-item {
    display: grid;
    grid-template-columns: auto auto;
    justify-self: start;
    place-content: center;
    padding: var(--space--2xs) var(--space--xs);
    column-gap: var(--space--xs);
    cursor: pointer;
    transition: transform var(--transition-speed--fast) ease;
    @media (min-width: $small) {
      grid-column: 1/ span 1;
    }
    &:before {
      forced-color-adjust: none;

      aspect-ratio: 1;
      width: var(--space--xl);
      content: "";
      outline: var(--outline--unset);
      background: var(--bg-pattern);
      background-color: var(--bg-color);
      background-size: var(--bg-size);
    }
    + .slice {
      forced-color-adjust: none;

      display: block;
      clip-path: shape(
      from top,
      arc to calc(50% + 50% * sin(var(--pct) * 3.6deg))
      calc(50% - 50% * cos(var(--pct) * 3.6deg)) of 50% small cw,
      line to center);
      grid-area: chart;
      aspect-ratio: 1;
      width: calc(var(--radius) * 2);
      margin-bottom: var(--space--md);
      content: "";
      cursor: pointer;
      transition: transform var(--transition-speed--fast) ease;
      transform: rotate(var(--offset));
      transform-origin: center;
      background: var(--bg-pattern);
      background-color: var(--bg-color);
      background-size: var(--bg-size);
      @media(min-width: $small) {
        margin-bottom: 0;
      }
      &:hover,
      &:active,
      &:focus {
        transform: scale(1.12) rotate(var(--offset));
      }
    }
    &:hover,
    &:active,
    &:focus,
    &:has(+ .slice:hover) {
      @include lightest-blue-bg;

      border-radius: var(--border-radius--round);
      outline: var(--outline--forced-colors);
      &:before {
        outline: solid contrast-color(var(--bg-color)) var(--border-width--sm);
        @media(forced-colors: active) {
          outline: var(--outline--forced-colors);
        }
      }
      + .slice {
        transform: scale(1.12) rotate(var(--offset));
      }
    }
  }
}
wwu-donut-chart {
  --chart-bg-size-0: 24px 24px;
  --chart-bg-size-1: 48px 48px;
  --chart-bg-size-2: calc(2*26px) 26px,26px 26px;
  --chart-bg-size-3: 48px 48px;
  --chart-bg-size-4: 44px 44px;
  --chart-bg-size-5: 20px 20px;
  --chart-bg-size-6: 15px 15px;
  --chart-bg-size-7: 48px 48px;
  --chart-color-0: #002f5e;
  --chart-color-1: #003f87;
  --chart-color-2: #0060ab;
  --chart-color-3: #007ac8;
  --chart-color-4: #429ad2;
  --chart-color-5: #7ab4da;
  --chart-color-6: #afcee1;
  --chart-color-7: #e3e7e9;
  --chart-pattern-0: linear-gradient(135deg,transparent 18.75%,var(--chart-color-0) 0 31.25%,transparent 0),
  repeating-linear-gradient(45deg,var(--chart-color-0) -6.25% 6.25%,var(--chart-color-2) 0 18.75%);
  --chart-pattern-1: repeating-radial-gradient(circle, transparent, transparent 8.4px, var(--chart-color-3) 8.4px, var(--chart-color-3) 10.8px),
  repeating-radial-gradient(circle, transparent, transparent 8.4px, var(--chart-color-3) 8.4px, var(--chart-color-3) 10.8px), var(--chart-color-1);
  --chart-pattern-2: linear-gradient(-45deg,transparent 1.3%,var(--chart-color-2) 0 32%,transparent 0),
  linear-gradient( 45deg,transparent  48%,var(--chart-color-4) 0 52%,transparent 0),
  linear-gradient( 45deg,transparent 1.3%,var(--chart-color-2) 0 32%,transparent 0) calc(24px/2) calc(24px/2),
  linear-gradient(-45deg,transparent  48%,var(--chart-color-4) 0 52%,transparent 0) var(--chart-color-2);
  --chart-pattern-3: radial-gradient(100% 100% at 100% 100%, transparent 46%,var(--chart-color-5) 47% 53%,transparent 54%) 26px 26px,
  radial-gradient(100% 100% at 0 0, transparent 46%,var(--chart-color-5) 47% 53%,transparent 54%) 26px 26px,
  radial-gradient(100% 100%, transparent 22%, var(--chart-color-5) 23% 29%, transparent 30% 34%, var(--chart-color-5) 35% 41%, transparent 42%)
  var(--chart-color-3);
  --chart-pattern-4: linear-gradient(135deg,transparent 20.5%,var(--chart-color-6) 0 29.5%,transparent 0) 0 11px,
  linear-gradient( 45deg,transparent 8%,var(--chart-color-6) 0 17%, transparent 0 58%) 22px 0,
  linear-gradient(135deg,transparent 8%,var(--chart-color-6) 0 17%, transparent 0 58%,var(--chart-color-6) 0 67%,transparent 0),
  linear-gradient( 45deg,transparent 8%,var(--chart-color-6) 0 17%, transparent 0 58%,var(--chart-color-6) 0 67%,transparent 0 83%,var(--chart-color-6) 0 92%,transparent 0),
  var(--chart-color-4);
  --chart-pattern-5: conic-gradient(from 90deg at 2px 2px,transparent 25%,var(--chart-color-5) 0) -1px -1px,
  linear-gradient(-45deg,var(--chart-color-5) 15%,var(--chart-color-6) 0 28%,transparent 0 72%,var(--chart-color-6) 0 85%,var(--chart-color-5) 0),linear-gradient(45deg,var(--chart-color-5) 15%,var(--chart-color-6) 0 28%,transparent 0 72%,var(--chart-color-6) 0 85%,var(--chart-color-5) 0),
  conic-gradient(from 90deg at 40% 40%,var(--chart-color-5) 25%,var(--chart-color-6) 0)
  calc(20px/-5) calc(20px/-5);
  --chart-pattern-6: repeating-linear-gradient(45deg, var(--chart-color-7) 0, var(--chart-color-7) 2px, transparent 0, transparent 50%);
  --chart-pattern-7: radial-gradient(50% 50% at 100% 0,var(--chart-color-7) 0%  5% ,var(--chart-color-6) 6%  15%,var(--chart-color-7) 16% 25%,var(--chart-color-6) 26% 35%,var(--chart-color-7) 36% 45%,
  var(--chart-color-6) 46% 55%,var(--chart-color-7) 56% 65%,var(--chart-color-6) 66% 75%,var(--chart-color-7) 76% 85%,var(--chart-color-6) 86% 95%,
  #0000 96%),
  radial-gradient(50% 50% at 0 100%,var(--chart-color-7) 0%  5% ,var(--chart-color-6) 6%  15%,var(--chart-color-7) 16% 25%,var(--chart-color-6) 26% 35%,var(--chart-color-7) 36% 45%,
  var(--chart-color-6) 46% 55%,var(--chart-color-7) 56% 65%,var(--chart-color-6) 66% 75%,var(--chart-color-7) 76% 85%,var(--chart-color-6) 86% 95%,
  #0000 96%),
  radial-gradient(50% 50%,var(--chart-color-7) 0%  5% ,var(--chart-color-6) 6%  15%,var(--chart-color-7) 16% 25%,var(--chart-color-6) 26% 35%,var(--chart-color-7) 36% 45%,
  var(--chart-color-6) 46% 55%,var(--chart-color-7) 56% 65%,var(--chart-color-6) 66% 75%,var(--chart-color-7) 76% 85%,var(--chart-color-6) 86% 95%,
  #0000 96%),
  radial-gradient(50% 50%,var(--chart-color-7) 0%  5% ,var(--chart-color-6) 6%  15%,var(--chart-color-7) 16% 25%,var(--chart-color-6) 26% 35%,var(--chart-color-7) 36% 45%,
  var(--chart-color-6) 46% 55%,var(--chart-color-7) 56% 65%,var(--chart-color-6) 66% 75%,var(--chart-color-7) 76% 85%,var(--chart-color-6) 86% 95%,
  #0000 96%) 24px 24px;
  &.light-blue {
    --chart-color-0: #006ebb;
    --chart-color-1: #1681ca;
    --chart-color-2: #2c93d9;
    --chart-color-3: #42a6e8;
    --chart-color-4: #57b8f7;
    --chart-color-5: #7ecafa;
    --chart-color-6: #b3d9f1;
    --chart-color-7: #e3e7e9;
  }
  &.green {
    --chart-color-0: #006b3f;
    --chart-color-1: #358a30;
    --chart-color-2: #6aa921;
    --chart-color-3: #9fc812;
    --chart-color-4: #c2dc2c;
    --chart-color-5: #d3e570;
    --chart-color-6: #e4edb3;
    --chart-color-7: #f5f6f7;
  }
}

